--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="layout-wrapper">
-        <div class="main-content">
+        <div class="main-content-front">
             <div class="bg-polygon"></div>
             <div class="title">
-                <img src="./logo.svg" alt="">
+                <img src="./logo.png" alt="">
             </div>
             <div class="subtitle">
                 ~ בית לאומנות עצמאית ~
@@ -26,8 +26,9 @@
                     </div>
                 </div>
             </div>
-            <button class="enter-button">כניסה</button>
+            <button id="enter-button" class="enter-button">כניסה</button>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
