addded flip and browser css support

--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,29 @@
 </head>
 <body>
     <div class="layout-wrapper">
-        <div class="main-content-front">
-            <div class="bg-polygon"></div>
-            <div class="title">
-                <img src="./logo.png" alt="">
-            </div>
-            <div class="subtitle">
-                ~ בית לאומנות עצמאית ~
-            </div>
-            <div class="count-wrapper">
-                <!-- <img src="./count-bg.jpg" alt="current count" class="count-bg"> -->
-                <div class="count-content">
-                    <div class="count-value-wrapper">
-                        <div class="count-value">17</div>
-                        <div class="count-subtitle">מתארחים כעת!</div>
+        <div id="main-content" class="flip-card">
+            <div class="landing-content card-front">
+                <div class="bg-polygon"></div>
+                <div class="title">
+                    <img src="./logo.png" alt="">
+                </div>
+                <div class="subtitle">
+                    ~ בית לאומנות עצמאית ~
+                </div>
+                <div class="count-wrapper">
+                    <!-- <img src="./count-bg.jpg" alt="current count" class="count-bg"> -->
+                    <div class="count-content">
+                        <div class="count-value-wrapper">
+                            <div class="count-value">17</div>
+                            <div class="count-subtitle">מתארחים כעת!</div>
+                        </div>
                     </div>
                 </div>
+                <button id="enter-button" class="enter-button">כניסה</button>
             </div>
-            <button id="enter-button" class="enter-button">כניסה</button>
+            <div class="form-content card-back">
+    
+            </div>
         </div>
     </div>
     <script src="./index.js"></script>
