form: fixed hidden send button

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                         <label>
                             זמן הגעה רצוי
                             <div class="form-input">
-                                <input type="number">:<input type="number">
+                                <input type="time" id="time-input" step="900">
                             </div>
                         </label>
                         
