added users data logic

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="enter-button" class="enter-button">כניסה</button>
+                <button id="show-form-btn" class="show-form-btn">כניסה</button>
             </div>
             <div class="form-content card-back">
                 <form action="#" id="registration-form" class="registration-form">
@@ -53,8 +53,8 @@
                             <canvas id="health-signature" class="signature-pad"></canvas>
                         </label>
                         <label class="enter-buttons">
-                            <button id="enter-btn" class="enter-btn action">לכניסה</button>
-                            <button id="enter-hour-btn" class="enter-btn">אגיע בשעה הקרובה</button>
+                            <button type="button" id="enter-btn" class="enter-btn action">לכניסה</button>
+                            <button type="button" id="pending-btn" class="enter-btn">אגיע בשעה הקרובה</button>
                         </label>
                     </div>
                 </form>
