--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
             <div class="landing-content card-front">
                 <div class="bg-polygon"></div>
                 <div class="title">
-                    <img src="./logo.png" alt="">
+                    <img src="./logo.svg" alt="">
+                    <div id="logo-text">
+                        <p>HOUSE</p>
+                    </div>
                 </div>
                 <div class="subtitle">
                     ~ בית לאומנות עצמאית ~
