--- a/src/index.html
+++ b/src/index.html
@@ -52,15 +52,15 @@
                             <input type="text" name="email" class="form-input">
                         </label>
                         <label class="input-wrapper">
-                            הנני מצהיר כי לא חשתי באחד מהסימפטומים הקבועים על ידי משרד הבריאות בשבועיים האחרונים
+                            הנני מצהיר כי לא חשתי באחד מהסימפטומים הקבועים על ידי משרד הבריאות בשבועיים האחרונים:
                             <canvas id="health-signature" class="signature-pad"></canvas>
                         </label>
-                        <label class="enter-buttons">
-                            <button type="button" id="enter-btn" class="enter-btn action">אני נכנס/ת</button>
-                            <button type="button" id="pending-btn" class="enter-btn">אגיע בשעה הקרובה</button>
-                            <button type="button" id="leave-btn" class="enter-btn hidden">אני יוצא/ת</button>
-                        </label>
                     </div>
+                    <label class="enter-buttons">
+                        <button type="button" id="enter-btn" class="enter-btn action">אני נכנס/ת</button>
+                        <button type="button" id="pending-btn" class="enter-btn">אגיע בשעה הקרובה</button>
+                        <button type="button" id="leave-btn" class="enter-btn hidden">אני יוצא/ת</button>
+                    </label>
                 </form>
             </div>
         </div>
