Add more info and center the map properly

--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@
                 </div>
                 <div class="info">
                     <h2>נהלי קורונה:</h2>
-                    <p>התערוכה מוגבלת לעד 20 אורחים, יש לעטות מסיכות בכל עת בביקורכם בתערוכה, יש לחתום על הצהרת בריאות לפני הכניסה לתערוכה. לשאלות ניתן לפנות לנטע: 058-431-3782 או עופר 054-659-2000.</p>
+                    <p>התערוכה מוגבלת לעד 20 אורחים, יש לעטות מסכות בכל עת בביקורכם בתערוכה, יש לחתום על הצהרת בריאות לפני הכניסה לתערוכה. לשאלות ניתן לפנות לנטע: 058-431-3782 או עופר 054-659-2000.</p>
                 </div>
                 <div class="location">
                     <div class="location-text">
-                        <p>התערוכה תתקיים בתאריכים 18.10-20.10 בשעות 17:00-21:00 בסוקולוב 70 רמת השרון</p>
+                        <p>התערוכה תתקיים בתאריכים <span class="bold">18.10-20.10</span> בשעות <span class="bold">17:00-21:00</span> <span class="bold">בסוקולוב 70 רמת השרון</span></p>
                     </div>
-                    <div style="width: 100%"><iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=200&amp;hl=en&amp;q=%D7%A1%D7%95%D7%A7%D7%95%D7%9C%D7%95%D7%91%2070%20%D7%A8%D7%9E%D7%AA%20%D7%94%D7%A9%D7%A8%D7%95%D7%9F+(INHOUSE)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+                    <div style="width: 100%"><iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=200&amp;hl=en&amp;q=%D7%A1%D7%95%D7%A7%D7%95%D7%9C%D7%95%D7%91%2070%20%D7%A8%D7%9E%D7%AA%20%D7%94%D7%A9%D7%A8%D7%95%D7%9F+(INHOUSE)&amp;ll=32.1494885,34.8883733&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
                 </div>
                 <button id="show-form-btn" class="button show-form-btn">כניסה</button>
             </div>
